# libvector

./: CMakeLists.txt  LICENSE  README.md  TODO  vector-config-version.cmake.in  vector-config.cmake.in  vector.pc.in
include/: vector.h
src/: logger.c  logger.h  vector.c  vector.h
tests/: numeric_vector_test.c  string_vector_test.c
tests/numeric/: CMakeLists.txt  numeric_vector_test.c
tests/string/: CMakeLists.txt  string_vector_test.c
tests/version/: CMakeLists.txt  main.c
